--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "7.4.2",
     "@mantine/hooks": "7.4.2",
+    "jsoneditor-react": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -27,6 +28,7 @@
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "1.12.3",
     "postcss-simple-vars": "^7.0.1",
+    "react-router-dom": "^6.21.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
