between localstorage in login

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mantine/core": "7.4.2",
+    "@mantine/form": "^7.4.2",
     "@mantine/hooks": "7.4.2",
+    "@tanstack/react-query": "^5.17.19",
     "jsoneditor-react": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
