--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tanstack/react-query": "^5.17.19",
     "jsoneditor-react": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.36",
