finish the worck 29/1/2024

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.19",
     "jsoneditor-react": "^3.1.2",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1"
   },
